# AI_Assistant_ETL_pipeline

./: .env.example  .gitignore  Dockerfile.etl  Dockerfile.phoenix  Dockerfile.streamlit  Dockerfile.weaviate  README.md  README_EMBEDDINGS.md  README_WEAVIATE.md  STREAMLIT_README.md  bulk_process_files.py  bulk_process_files_with_phoenix.py  docker-compose-phoenix.yml  docker-compose-streamlit.yml  docker-compose-weaviate.yml  etl_concept_viewer.py  etl_with_embeddings.py  multimodal_embeddings.py  phoenix_observer.py  query_weaviate.py  query_with_phoenix.py  query_with_weaviate.py  requirements.txt  requirements_cloud.txt  requirements_phoenix.txt  requirements_streamlit.txt  requirements_weaviate.txt  streamlit_app.py  streamlit_app_cloud.py  streamlit_app_minimal.py  streamlit_app_redirect.py  weaviate_client.py
LocalETL/: .env.template  CHANGELOG.md  Makefile  README.md  example_claude_desktop_config.json  pyproject.toml
LocalETL/connectors/: __init__.py  utils.py
LocalETL/connectors/destination/: __init__.py  local_dir.py
LocalETL/connectors/source/: __init__.py  local_dir.py
LocalETL/local_mcp/: __init__.py  custom_http_client.py  docstring_extras.py  server.py
LocalETL/minimal_client/: __init__.py  client.py
LocalETL/notebooks/: local_etl_workflow.ipynb
