[project]
name = "local-etl"
version = "0.1.0"
description = "ETL for reading local documentation and processing with Unstructured API"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "boto3>=1.37.14",
    "mcp[cli]>=1.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "notebook>=7.3.3",
    "python-dotenv>=1.0.1",
    "unstructured-client>=0.31.6",
    "pip",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["connectors", "minimal_client"]  # Explicitly list your packages

[project.optional-dependencies]
dev=[
    "pre-commit"
]